# experiments

./: .gitignore
bash/001_test_ampersand/: first.py  script
bash/002_test_fall/: main.cpp  s.sh
cpp/001_tie/: main.cpp  run
cpp/002_lambda_without_parenthesis/: a.tar  main.cpp
cpp/003_futures/: main.cpp
cpp/004_braced/: main.cpp
cpp/005_para/: Makefile  main.cpp
cpp/006_ub/: main.cpp
cpp/007_inherit/: main.cpp
cpp/008_thread_pool/: concurentqueue.cpp  concurentqueue.h  threadpool.cpp  threadpool.h
cpp/009_virtual_inheritance/: main.cpp
cpp/010_recursive_template/: Makefile  compile  main.cpp
cpp/011_lambda_in_lambda/: main.cpp  run
cpp/012_templates/: \  main.cpp  run
cpp/013_delete_used_file/: main.cpp  run
cpp/014_dijkstra/: compile  main.cpp  test
cpp/015_credit/: compile  main.cpp
cpp/016_fold_expressions/: compile  main.cpp
cpp/017_overload/: compile  main.cpp
cpp/018_vector_initialization/: main.cpp
cpp/019_ternary_magic/: main.cpp
cpp/020_tricky_overload/: compile  main.cpp
cpp/021_using_private/: main.cpp
cpp/022_showbase/: main.cpp
cpp/023_gbench_hw/: CMakeLists.txt  bench.cpp  compile.sh  input
cpp/024_mult_ostreams_same_file/: filename.txt  main.cpp
cpp/025_boost_mmap/: CMakeLists.txt  compile.sh  input  main.cpp
cpp/026_case_independent_sv/: main.cpp
cpp/027_hash_helper/: main.cpp
cpp/029_lambda/: main.cpp
cpp/030_delete_undefined/: compile  main.cpp
cpp/031_jewels/: main.cpp
cpp/032_one_sequence/: main.cpp
cpp/033_delete_dub/: main.cpp
cpp/034_anagram_sort/: compile  main.cpp
(+38 files in other folders)
